# high-performance-trading-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dashboard.html
benchmarks/: CMakeLists.txt
include/core/: order.hpp  trade.hpp  types.hpp
include/engine/: matching_engine.hpp  order_book.hpp  price_level.hpp
include/network/: fix_message.hpp  market_data.hpp  tcp_server.hpp  websocket_server.hpp
include/risk/: risk_manager.hpp
include/utils/: config.hpp  lockfree_queue.hpp  logger.hpp  memory_pool.hpp  metrics.hpp  profiler.hpp  timer.hpp
src/: dashboard_server.cpp  main.cpp  simple_server.cpp  test_matching_engine.cpp  test_network.cpp  test_order_book.cpp  test_performance.cpp  test_production.cpp
src/core/: order.cpp
src/engine/: matching_engine.cpp  order_book.cpp
tests/: CMakeLists.txt
tests/placeholder/: test.cpp
